Lock in the pixel size of flags to prevent flicker

--- a/eu4_parse.css
+++ b/eu4_parse.css
@@ -106,10 +106,11 @@ color choice can be overridden based on its parent. */
 .caution {margin: 0 0.5em; cursor: default;}
 
 .flag.small {
-	height: 1.25em;
+	width: 24px; height: 24px;
 }
 .flag.large {
 	display: block;
+	width: 128px; height: 128px;
 	margin: auto;
 }
 #hovercountry {
